<resources>
    <string name="app_name">MAD Level 1 Task 1</string>
    <string name="title">Guess if the next throw is going to be lower, equal or higher.</string>
    <string name="dice_description">Random dice number</string>
    <string name="last_throw">Last Throw: %d</string>
    <string name="lower">LOWER</string>
    <string name="equals">EQUALS</string>
    <string name="higher">HIGHER</string>
</resources>
