<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dice1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        android:contentDescription="@string/dice_description" />

    <TextView
        android:id="@+id/tvLastThrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_throw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDice" />

    <Button
        android:id="@+id/btnLower"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEquals"/>

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        app:layout_constraintStart_toEndOf="@id/btnLower"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnHigher"/>

    <Button
        android:id="@+id/btnHigher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/higher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEquals"/>

</androidx.constraintlayout.widget.ConstraintLayout>